[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/fade_scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://sound/starwars.mp3" type="AudioStream" id=3]
[ext_resource path="res://art/Menu/menu_screen.png" type="Texture" id=4]
[ext_resource path="res://art/Menu/paw.png" type="Texture" id=5]
[ext_resource path="res://art/Fonts/DiloWorld-mLJLv.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 5
outline_color = Color( 0.996078, 0.988235, 0.843137, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
margin_right = 1920.0
margin_bottom = 1072.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
margin_top = 192.0
margin_right = 1920.0
margin_bottom = 350.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Paws on the pitch"
align = 1

[node name="Play" type="Label" parent="Title"]
anchor_right = 0.363
margin_left = 864.0
margin_top = 344.0
margin_right = 294.04
margin_bottom = 408.0
rect_pivot_offset = Vector2( 48, 16 )
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Quit" type="Label" parent="Title"]
margin_left = 872.0
margin_top = 528.0
margin_right = 980.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Game_by_outcast" type="Label" parent="Title"]
margin_top = 368.0
margin_right = 1920.0
margin_bottom = 888.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "  A game by: Outcast Studiosâ„¢"
valign = 2

[node name="Background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0

[node name="Left_paw" type="Sprite" parent="."]
position = Vector2( 760, 544 )
scale = Vector2( 0.29692, 0.29692 )
texture = ExtResource( 5 )

[node name="Right_paw" type="Sprite" parent="."]
position = Vector2( 1096, 544 )
scale = Vector2( 0.29692, 0.29692 )
texture = ExtResource( 5 )
flip_h = true

[node name="TransitionScreen" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
